# Self-Compiler

./: .gitignore  CMakeLists.txt  README.md  grammar.txt
GUI/: GUI.h  main.cpp
Lexer/: DataBase.h  Lexer.cpp  Lexer.h  main.cpp
Parser/: LRParserGenerator.cpp  LRParserGenerator.h  main.cpp  parser.cpp  parser.h
